Fix for bug 13778, GetFilePrefs now accept also a native path to let users write manually their prefs